Fixed loading ballots from custom location